--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 2px solid #111111;
   text-align: left;
   padding: 1.5px;
+  font-size: 14px;
+}
+
+th {
+  background-color: #576978;
+  color: aliceblue;
 }
 
 .Title {
