landing page done

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
 
     <div class="container2">
         <div class="fern">
-            <img src="https://raw.githubusercontent.com/Nis-chal/web-dev/main/images/ab1.jpg" alt="">
+            <img src="https://images.pexels.com/photos/2802403/pexels-photo-2802403.jpeg?cs=srgb&dl=pexels-lucky-trips-2802403.jpg&fm=jpg" alt="">
 
         </div>
 
@@ -40,12 +40,16 @@
 
             <div class="ferncontext">
                 <h3 class="textgreen">About This Project</h3>
-                <h3 class="lightertext">we cannot afford to fail in our mission to save a living planet</h3>
-                <p>delectus reiciendis maiores alias consequatur aut.maiores alias Lorem ipsum dolor sit amet,
-                    consectetur
-                    adipiscing elit sed do eiusmod delectus reiciendis maiores alias consequatur aut.maiores alias Lorem
-                    ipsum
-                    dolor sit amet, consectetur</p>
+                <h3 class="lightertext">The data visualization of migration in India presents a multifaceted view of demographic movements within the nation. </h3>
+                <p>This comprehensive visual representation encompasses a spectrum of crucial factors influencing migration trends. 
+                    Alongside migration patterns, we gain insights into India's dynamic labor market with visuals depicting the unemployment rate and monthly 
+                    wages in various countries. Furthermore, the visualization delves into India's vast population, offering a clear depiction of its size 
+                    and distribution. Understanding the motivations behind Indian migration is pivotal, and the data visualization provides key insights into 
+                    the factors driving this phenomenon. Additionally, the visualization highlights the correlation between disease prevalence and migration 
+                    patterns, underscoring the importance of public health in demographic shifts. Lastly, the visualization captures the essence of India's 
+                    global presence, showcasing immigration trends from India to various countries. These visuals collectively offer a comprehensive narrative of 
+                    India's demographic landscape, serving as a valuable resource for policymakers, researchers, and stakeholders alike.
+                </p>
 
             </div>
             <!--
@@ -111,14 +115,10 @@
 
         <div class="forest__context">
             <div class="forest--text">
-                <div class="forest__paragraph">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                    </p>
-                </div>
+                
                 <div class="forest__heading">
-                    <h3>What we provide</h3>
-                    <h1>Data Visualisation</h1>
+                    <h3>We provide</h3>
+                    <h1>Data Visualisations</h1>
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
 
             <a href="heatmap.html" class="box">
                  <span><i class="fa-solid fa-paw"></i></span>
-                <h2>Monthly wages of various countries</h2>
+                <h2>Monthly Wages of Various Countries</h2>
                 <p>Heatmap chart</p>
             </a>
 
@@ -145,20 +145,20 @@
 
             <div class="box">
                 <span><i class="fas fa-tint"></i></span>
-                <h2>Indian migration Reason</h2>
+                <h2>Indian Migration Reason</h2>
                 <p>Pie chart</p>
             </div>
 
             <div class="box">
                 <span><i class="fab fa-envira"></i></span>
-                <h2>Disease leads to migration</h2>
+                <h2>Disease Leads to Migration</h2>
                 <p>Clustered stacked bar chart</p>
             </div>
 
 
             <div class="box">
                 <span><i class="far fa-snowflake"></i></span>
-                <h2>Immigration from India to other countries</h2>
+                <h2>Immigration From India to Other Countries</h2>
                 <p>Bubble chart</p>
             </div>
 
