--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -256,7 +256,7 @@ th {
             var originalFillColor = d3.select(this).style("fill");
 
             d3.select(this) // Select the hovered element
-            .style("fill", "#F8C471"); // Change fill color to blue
+            .style("fill", "#F8C471"); // Change fill color to light yellow
             
             d3.select(".state-text")
             .style("font-size", "16px");
