--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                 <p>Heatmap chart</p>
             </a>
 
-            <div class="box">
+            <a href="sunburst.html" class="box">
                 <span><i class="fas fa-tree"></i></span>
                 <h2>Population of the India</h2>
                 <p>Sunburst chart</p>
             </div>
 
-            <div class="box">
+            <a href="pie.html" class="box">
                 <span><i class="fas fa-tint"></i></span>
                 <h2>Indian Migration Reason</h2>
                 <p>Pie chart</p>
@@ -156,7 +156,7 @@
             </div>
 
 
-            <div class="box">
+            <a href="bubble_chart.html" class="box">
                 <span><i class="far fa-snowflake"></i></span>
                 <h2>Immigration From India to Other Countries</h2>
                 <p>Bubble chart</p>
