--- a/heatmap.html
+++ b/heatmap.html
@@ -1,5 +1,3 @@
-
-<!-- Code from d3-graph-gallery.com -->
 <!DOCTYPE html>
 <html>
 <header>
@@ -7,12 +5,39 @@
 </header>
 <head>
 <meta charset="utf-8">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="nav.css" />
+
 </head>
 <style>
 
 body {
   background-color: #dedede;
 }
+
+@keyframes heatmapAnimation {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.heatmap-rect {
+  position: relative;
+  animation: heatmapAnimation 1s ease forwards; /* 0.5s duration, ease timing, and forwards to keep the final state */
+}
+
+.heatmap-rect.show {
+  opacity: 1;
+  animation: none; /* Disable the animation when the heatmap is shown */
+}
+
 
 .tooltip {
   position: absolute;
@@ -52,7 +77,8 @@ body {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 50%;
+  width: 80%;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.19);
 }
 
 td, th {
@@ -62,15 +88,32 @@ td, th {
 }
 
 th {
-  background-color: #576978;
+  background-color: #155691;
   color: aliceblue;
+}
+
+tr:hover {
+    background-color: #b1d3eb;
 }
 
 .filterButton {
   width: 150px;
-  height: 40px;
+  height: 50px;
   font-size: 15px;
   margin-bottom: 20px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid #155691;
+  color: #293043;
+  border-radius: 4px;
+  background-color: #e4edf4; 
+  transition: background-color 0.3s;
+}
+
+.filterButton:hover {
+  background-color: #659EC7;
+  color: #fff;
 }
 
 #C-name {
@@ -87,7 +130,35 @@ th {
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
 
-<div class="top">
+<div class="sidenav">
+  <span class="navbtn" href=""><i class="fa fa-navicon"></i></span>
+
+  <div class="items">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="choropleth_map.html">Unemployement</a></li>
+        <li><a href="heatmap.html">Wages</a></li>
+        <li><a href="sunburst.html">Population</a></li>
+        <li><a href="pie_chart.html">Reason</a></li>
+        <li><a href="#">Disease</a></li>
+        <li><a href="bubble_chart.html">Immigration</a></li>
+      </ul>
+  </div>
+</div>
+
+<script>
+const btn = document.querySelector(".navbtn");
+  btn.addEventListener("click",()=>{
+  document.body.classList.toggle("active")
+  })
+</script>
+
+<div class="details">
+
+</div>
+
+<div class="H-chart">
+  <div class="top">
   <div class="LH">
     <div id="my_dataviz"></div>
   </div>
@@ -110,6 +181,8 @@ th {
   <div id="C-name"></div>
   <div id="table_Country"></div>
 </div>
+</div>
+
 
 <script>
 
@@ -127,6 +200,9 @@ th {
     .attr("transform",
           "translate(" + margin.left + "," + margin.top + ")");
   
+  d3.selectAll(".heatmap-rect")
+  .classed("heatmap-transition", true);
+
 /**************************************/
 
   // Build X scales and axis:
@@ -263,7 +339,7 @@ var myColor10 = d3.scaleLinear()
     tooltip
       .html("<b><h3>" + d.country_name + 
       "</h3></b><br> Country code: " + d.country_code + "<br>Year: " + d.year + 
-      "<br>Monly wages: " + d.monthly_wages + "<br>Hour wages: " + d.hour_wages)
+      "<br>Monthly wages: " + d.monthly_wages + "<br>Hour wages: " + d.hour_wages)
       .style("left", (d3.mouse(this)[0]+70) + "px")
       .style("top", (d3.mouse(this)[1]) + "px");
   }
@@ -277,12 +353,16 @@ var myColor10 = d3.scaleLinear()
 
   var activeBox = null; // Initialize active state variable
 
+  // Add a class to show heatmap rectangles with fade-in animation
+  d3.selectAll(".heatmap-rect").classed("show", true);
+
   
     // add the squares
   svg.selectAll()
     .data(data)
     .enter()
     .append("rect")
+    .attr("id", "heatmap-rect") 
     .attr("x", function(d) { return x(d.country_name) })
     .attr("y", function(d) { return y(d.year) })
     .attr("width", x.bandwidth() )
@@ -348,6 +428,7 @@ function displayAllSquares() {
     .data(data)  // Use the original data
     .enter()
     .append("rect")
+    .attr("class", "heatmap-rect") 
     .attr("x", function(d) { return x(d.country_name) })
     .attr("y", function(d) { return y(d.year) })
     .attr("width", x.bandwidth() )
@@ -396,6 +477,7 @@ function updateHeatmap(filteredData) {
       .data(filteredData)
       .enter()
       .append("rect")
+      .attr("class", "heatmap-rect") 
       .attr("x", function(d) { return x(d.country_name) })
       .attr("y", function(d) { return y(d.year) })
       .attr("width", x.bandwidth() )
