--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" href="landing.css" />
   </head>
 <body>
+    <nav>
+        <ul class="list">
+          <li><a href="#">Unemployement</a></li>
+          <li><a href="#">Wages</a></li>
+          <li><a href="#">Population</a></li>
+          <li><a href="#">Reason</a></li>
+          <li><a href="#">Disease</a></li>
+          <li><a href="#">Immigration</a></li>
+        </ul>
+      </nav>
+
     <div class="container">
         <div class="content">
             <h3>Migration of India</h3>
