choropleth map done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <body>
     <nav>
         <ul class="list">
-          <li><a href="#">Unemployement</a></li>
-          <li><a href="#">Wages</a></li>
-          <li><a href="#">Population</a></li>
+          <li><a href="choropleth_map.html">Unemployement</a></li>
+          <li><a href="heatmap.html">Wages</a></li>
+          <li><a href="sunburst.html">Population</a></li>
           <li><a href="#">Reason</a></li>
           <li><a href="#">Disease</a></li>
-          <li><a href="#">Immigration</a></li>
+          <li><a href="bubble_chart.html">Immigration</a></li>
         </ul>
       </nav>
 
