--- a/sunburst.html
+++ b/sunburst.html
@@ -70,7 +70,7 @@ p {
 .line { 
     border-top: 3px solid #111; 
     display: block; margin-top: 60px; 
-    padding-top: 50px; position: relative; }
+    margin-bottom: 50px; position: relative; }
 
 .chartname { text-align: center; font-size: 18px; }
 
@@ -218,7 +218,7 @@ tr:hover {
     
         <div class="items">
             <ul>
-                <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="choropleth_map.html">Unemployement</a></li>
               <li><a href="heatmap.html">Wages</a></li>
               <li><a href="sunburst.html">Population</a></li>
