--- a/pie_chart.html
+++ b/pie_chart.html
@@ -1,82 +1,178 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pie Chart</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="nav.css" />
+  <script src="http://d3js.org/d3.v3.min.js"></script>
 
-<!-- Load d3.js -->
-<script src="https://d3js.org/d3.v4.js"></script>
+</head>
 
-<!-- Color scale -->
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<style>
+  body {
+    font: 10px sans-serif;
+  }
 
-<!-- Add 2 buttons -->
-<button onclick="update(data1)">Data 1</button>
-<button onclick="update(data2)">Data 2</button>
+  .arc path {
+    stroke: #fff;
+    cursor: pointer;
+  }
 
-<!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+  .tooltip {
+    position: absolute;
+    text-align: center;
+    background: #000000cc;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 12px;
+    opacity: 0;
+    line-height: 200%;
+  }
+
+  .all {
+    width: 100%;
+    height: 700px;
+}
+
+.left {
+    margin: auto;
+    width: 75%;
+    height: 100%;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: azure;
+}
+
+.right {
+    width: 15%;
+    height: 100%;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#chart {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.info {
+    color: black;
+}
+
+.legend {
+    margin-bottom: 20px;
+}
+
+.legend strong {
+    font-size: 18px;
+    text-decoration: underline; 
+}
+</style>
+<body>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+
+<div class="sidenav">
+  <span class="navbtn" href=""><i class="fa fa-navicon"></i></span>
+
+  <div class="items">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="choropleth_map.html">Unemployement</a></li>
+        <li><a href="heatmap.html">Wages</a></li>
+        <li><a href="sunburst.html">Population</a></li>
+        <li><a href="pie_chart.html">Reason</a></li>
+        <li><a href="#">Disease</a></li>
+        <li><a href="bubble_chart.html">Immigration</a></li>
+      </ul>
+  </div>
+</div>
+
+<script>
+const btn = document.querySelector(".navbtn");
+  btn.addEventListener("click",()=>{
+  document.body.classList.toggle("active")
+  })
+</script>
+
+<div class="all">
+  <div class="left">
+      <div id="chart"></div>
+      <div id="tooltip" class="tooltip">
+          <div id="info" class="info"></div>
+      </div>
+  </div>
+
+  <div class="right">
+      <div id="legend"></div>
+  </div>
+</div> 
 
 <script>
 
-  // set the dimensions and margins of the graph
-  var width = 450
-      height = 450
-      margin = 40
-  
-  // The radius of the pieplot is half the width or half the height (smallest one). I subtract a bit of margin.
-  var radius = Math.min(width, height) / 2 - margin
-  
-  // append the svg object to the div called 'my_dataviz'
-  var svg = d3.select("#my_dataviz")
-    .append("svg")
-      .attr("width", width)
-      .attr("height", height)
-    .append("g")
-      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-  
-  // create 2 data_set
-  var data1 = {a: 9, b: 20, c:30, d:8, e:12}
-  var data2 = {a: 6, b: 16, c:20, d:14, e:19, f:12}
-  
-  // set the color scale
-  var color = d3.scaleOrdinal()
-    .domain(["a", "b", "c", "d", "e", "f"])
-    .range(d3.schemeDark2);
-  
-  // A function that create / update the plot for a given variable:
-  function update(data) {
-  
-    // Compute the position of each group on the pie:
-    var pie = d3.pie()
-      .value(function(d) {return d.value; })
-      .sort(function(a, b) { console.log(a) ; return d3.ascending(a.key, b.key);} ) // This make sure that group order remains the same in the pie chart
-    var data_ready = pie(d3.entries(data))
-  
-    // map to data
-    var chart = svg.selectAll("path")
-      .data(data_ready)
-  
-    // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
-    chart
-      .enter()
-      .append('path')
-      .merge(chart)
-      .transition()
-      .duration(1000)
-      .attr('d', d3.arc()
-        .innerRadius(0)
-        .outerRadius(radius)
-      )
-      .attr('fill', function(d){ return(color(d.data.key)) })
-      .attr("stroke", "white")
-      .style("stroke-width", "2px")
-      .style("opacity", 1)
-  
-    // remove the group that is not present anymore
-    u
-      .exit()
-      .remove()
-  
-  }
+var width = 1200,
+    height = 700,
+    radius = Math.min(width, height) / 2;
 
-  </script>
+var color = d3.scale.ordinal()
+    .range(["#E6B0AA", "#AF7AC5", "#5DADE2", "#48C9B0", "#ABEBC6", "#F7DC6F", "#DC7633", "#979A9A", "#5D6D7E", "#4A235A", "#2874A6", "#CD4639", "#FFA7F7", "#D2E559"]);
 
+// 修改内外半径以创建环形图
+var arc = d3.svg.arc()
+    .outerRadius(radius - 250)
+    .innerRadius(radius - 10); // 调整内半径以创建环
 
+var pie = d3.layout.pie()
+    .sort(null)
+    .value(function(d) { return d.male; });
+
+var svg = d3.select("#chart").append("svg")
+    .attr("width", width)
+    .attr("height", height)
+  .append("g")
+    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+var tooltip = d3.select("body")
+    .append("div")
+    .attr("class", "tooltip")
+    .style("opacity", 0);
+
+d3.csv("migration_reason.csv", function(error, data) {
+  data.forEach(function(d) {
+    d.male = +d.male;
+  });
+
+  var g = svg.selectAll(".arc")
+      .data(pie(data))
+    .enter().append("g")
+      .attr("class", "arc")
+      .on("mouseover", function(d) {
+        tooltip.transition()
+          .duration(200)
+          .style("opacity", .9);
+        tooltip.html("Reason For Migration: " + d.data.reason_for_migration + "<br/>" + "Male: " + d.data.male)
+          .style("left", (d3.event.pageX) + "px")
+          .style("top", (d3.event.pageY - 28) + "px");
+      })
+      .on("mouseout", function(d) {
+        tooltip.transition()
+          .duration(500)
+          .style("opacity", 0);
+      });
+
+  g.append("path")
+      .attr("d", arc)
+      .style("fill", function(d) { return color(d.data.reason_for_migration); });
+});
+
+</script>
+</body>
+</html>
