--- a/index.html
+++ b/index.html
@@ -138,23 +138,23 @@
 
             <a href="choropleth_map.html" class="box" >
                 <span><i class="fab fa-pagelines"></i></span>
-                <h2>Unemployement Rate in India</h2>
+                <h2>Unemployement Rate of 2023 in India States</h2>
                 <p>Choropleth map chart</p>
             </a>
 
             <a href="heatmap.html" class="box">
                  <span><i class="fa-solid fa-paw"></i></span>
-                <h2>Monthly Wages of Various Countries</h2>
+                <h2>Wages of Various Countries</h2>
                 <p>Heatmap chart</p>
             </a>
 
             <a href="sunburst.html" class="box">
                 <span><i class="fas fa-tree"></i></span>
-                <h2>Population of the India</h2>
+                <h2>Population of India</h2>
                 <p>Sunburst chart</p>
             </a>
 
-            <a href="pie.html" class="box">
+            <a href="pie_chart.html" class="box">
                 <span><i class="fas fa-tint"></i></span>
                 <h2>Indian Migration Reason</h2>
                 <p>Pie chart</p>
