--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                 <p>Pie chart</p>
             </a>
 
-            <div class="box">
+            <a href="clustered_stacked_bar_chart.html" class="box">
                 <span><i class="fab fa-envira"></i></span>
                 <h2>Disease Leads to Migration</h2>
                 <p>Clustered stacked bar chart</p>
-            </div>
+            </a>
 
 
             <a href="bubble_chart.html" class="box">
