--- a/pie_chart.html
+++ b/pie_chart.html
@@ -91,7 +91,7 @@
         <li><a href="heatmap.html">Wages</a></li>
         <li><a href="sunburst.html">Population</a></li>
         <li><a href="pie_chart.html">Reason</a></li>
-        <li><a href="#">Disease</a></li>
+        <li><a href="clustered_stacked_bar_chart.html">Disease</a></li>
         <li><a href="bubble_chart.html">Immigration</a></li>
       </ul>
   </div>
