--- a/heatmap.html
+++ b/heatmap.html
@@ -225,7 +225,7 @@ tr:hover {
         <li><a href="heatmap.html">Wages</a></li>
         <li><a href="sunburst.html">Population</a></li>
         <li><a href="pie_chart.html">Reason</a></li>
-        <li><a href="#">Disease</a></li>
+        <li><a href="clustered_stacked_bar_chart.html">Disease</a></li>
         <li><a href="bubble_chart.html">Immigration</a></li>
       </ul>
   </div>
