--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -279,6 +279,10 @@ tr {
         leveraging the insights gleaned from such visualizations, India can tailor interventions to address regional disparities, enhance skill development, and create 
         an environment conducive to sustainable economic growth, ultimately mitigating the challenges posed by unemployment.
       </p>
+      
+      <p>
+        <a href="https://www.studyiq.com/articles/unemployment-rate-in-india/">Data Source</a> | <a href="https://gist.github.com/jchakko/3ed6478bc5849e9925c4a82ce8147a8a">References Code</a>
+      </p>
     </div>
   </div>
 
