--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -209,6 +209,11 @@ tr {
   padding: 20px; /* Adjust padding as needed */
 }
 
+.data { color: #e8d4a7; text-decoration: none; text-align: right; padding: 15px; font-size: 20px; }
+
+
+.data:hover { color: #da9650; text-decoration: underline;}
+
 </style>
 </head>
 <body>
@@ -281,7 +286,7 @@ tr {
       </p>
       
       <p>
-        <a href="https://www.studyiq.com/articles/unemployment-rate-in-india/">Data Source</a> | <a href="https://gist.github.com/jchakko/3ed6478bc5849e9925c4a82ce8147a8a">References Code</a>
+        <a class="data" href="https://www.studyiq.com/articles/unemployment-rate-in-india/">Data Source</a> | <a class="data" href="https://gist.github.com/jchakko/3ed6478bc5849e9925c4a82ce8147a8a">References Code</a>
       </p>
     </div>
   </div>
